intTests/test_parse_errors/parser003.log.good
Loading file "parser003.saw"
Error: Parse error at parser003.saw:2:36-2:38: Unexpected `in'
FAILED
