intTests/test_parse_errors/parser003.saw
// "rebindable" is not allowed in let-expressions
let c = do { let rebindable c' = 3 in (); return (); };
